rangefunc1.0,py
Python 3.10.12 (main, Nov  6 2024, 20:22:13) [GCC 11.4.0] on linux
Type "help", "copyright", "credits" or "license" for more information.
>>> #in this project we are going to see breifly about range() in numbers and  in list and dictionaries ect.
for i in range(5):
    print(i)

>>> ... ... 0
1
2
3
4
>>> #range() in list
Names = ["Matha","Joice","Linda","Purity","Petronila","Grace"]
for i in range(len(Names)):
    print(i,Names[i])
>>> >>> ... ... #range() in list
Names = ["Matha","Joice","Linda","Purity","Petronila","Grace"]
for i in range(len(Names)):
    print(i,Names[i])
...   File "<stdin>", line 4
    Names = ["Matha","Joice","Linda","Purity","Petronila","Grace"]
    ^^^^^
SyntaxError: invalid syntax
>>> ... ... 
>>> a = ["Matha","Joice","Linda","Purity","Petronila","Grace"]
for i in range(len(a)):
    print(i,a[i])
>>> ... ... 
0 Matha
1 Joice
2 Linda
3 Purity
4 Petronila
5 Grace
>>> #my code
b = ['cars', 'bike', 'ships', 'planes']
for i in range(len(b)):
    print(i, b[i])

>>> >>> ... ... 0 cars
1 bike
2 ships
3 planes
>>> list(range(0,10,3))
[0, 3, 6, 9]
>>> list(range(5,9))
[5, 6, 7, 8]
>>> 
>>> list(range(1,100))
[1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 83, 84, 85, 86, 87, 88, 89, 90, 91, 92, 93, 94, 95, 96, 97, 98, 99]
>>> list(range(-12,-17,-2,-19))
... 
... list(range(-12,-17,-2,-19))
  File "<stdin>", line 1
    list(range(-12,-17,-2,-19)
         ^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
>>> list(range(-12,-17,-2,-19))
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
TypeError: range expected at most 3 arguments, got 4
>>> list(range(-12,-21,-17))
[-12]
>>> list(range(-10,-20,-30,-40))
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
TypeError: range expected at most 3 arguments, got 4
>>> list(range(-10,-30,-100))
[-10]
>>> list(range(-10,-30,-100))
[-10]
>>> list(range(-10,-30,-100))
[-10]
>>> sum(range(4))
6
>>> sum(range(12))
66
>>> 